# rust-memory-alloc

./: Cargo.toml  README.md
src/: main.rs
traces/: trace-1702942840709813.json  trace-1702942861894552.json  trace-1702942883629486.json
